--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ repositories {
 
 dependencies {
   implementation 'com.discord4j:discord4j-core:3.1.7'
-  implementation files("../../Java/SHARED/shaded-jar/Http_SHADED.jar")
-  implementation files("../../Java/SHARED/shaded-jar/Utils_SHADED.jar")
+  implementation files("./Http_SHADED.jar")
+  implementation files("./Utils_SHADED.jar")
   implementation 'org.sejda.imageio:webp-imageio:0.1.6'
   implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
 }
