Gradle files updated to be more portable, bot serves its own card images, bot allows local management, README is updated

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ dependencies {
   implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+    }
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'ExampleBot'
