--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'DropsBot'
     }
-	baseName 'DropsBotNoDependencies'
+	archiveBaseName.set('DropsBotNoDependencies')
 }
 
 mainClassName = 'DropsBot'
